[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupiterbroadcasting-mcp"
version = "0.1.0"
description = "A FastMCP server for parsing Jupiter Broadcasting Podcast 2.0 RSS feeds"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Red5d", email = "red5d@red5d.dev"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp",
    "requests",
    "lxml",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "mypy",
]

[project.urls]
Homepage = "https://github.com/Red5d/jupiterbroadcasting-mcp"
Repository = "https://github.com/Red5d/jupiterbroadcasting-mcp"

[project.scripts]
jupiterbroadcasting-mcp = "jupiterbroadcasting_mcp.server:main"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true